--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -7,7 +7,7 @@
     </div>
     <div group>
         <div label>Category #2</div>
-        <material-list-item (click)="sidebarVisible = false">Item #4</material-list-item>
+        <material-list-item>Item #4</material-list-item>
     </div>
 </fo-sidebar>
 <div>
