--- a/lib/components/data_table_component/data_table_component.html
+++ b/lib/components/data_table_component/data_table_component.html
@@ -38,7 +38,7 @@
         <table>
             <tr>
                 <td class="arrow" (click)="step(-1)"><glyph [class.disabled]="firstIndex <= 0" icon="navigate_before"></glyph></td>
-                <td class="page">page {{currentPage}}/{{totalPages}} ({{filteredKeys.length}})</td>
+                <td class="page">{{pageTitle}} {{currentPage}}/{{totalPages}} ({{filteredKeys.length}})</td>
                 <td class="arrow" (click)="step(1)"><glyph [class.disabled]="lastIndex >= filteredKeys.length" icon="navigate_next"></glyph></td>
             </tr>
         </table>
