--- a/lib/components/fo_time_picker_component/fo_time_picker_component.html
+++ b/lib/components/fo_time_picker_component/fo_time_picker_component.html
@@ -1,4 +1,4 @@
-<label *ngIf="label != null" (click)="strHour = null; strMinute = null">{{label}}</label>
+<p class="label" *ngIf="strHour != null && strMinute != null" (click)="strHour = null; strMinute = null">{{label}}</p>
 <div id="canvas">
     <div *ngIf="strHour == null">
         <div
