--- a/lib/components/fo_file_upload_component/fo_file_upload_component.html
+++ b/lib/components/fo_file_upload_component/fo_file_upload_component.html
@@ -1,11 +1,14 @@
 <label>{{label}}</label>
 <div class="container" (dragenter)="$event.preventDefault()" (dragover)="$event.preventDefault()" (drop)="onDrop($event)">
-    <input #input type="file" (change)="onFileChange($event)" accept="image/jpg,image/jpeg,image/png,image/gif,application/pdf" />
+    <input #input type="file" (change)="onFileChange($event)" accept="image/*,.pdf" />
     <material-button raised (trigger)="input.click()"><glyph icon="folder_open"></glyph></material-button>
-    <material-button raised [disabled]="disabled || file == null" (trigger)="onUploadController.add(file)"><glyph icon="file_upload"></glyph></material-button>
+    <material-button raised [disabled]="disabled || !valid" (trigger)="upload()"><glyph icon="file_upload"></glyph></material-button>
     <p>
         <span *ngIf="file == null">...</span>
         <span *ngIf="file != null">{{file.name}} ({{(file.size / 1024).round()}}kb)</span>
-        <glyph *ngIf="file != null" icon="cancel" size="small" class="cancel-button" (click)="file = null"></glyph>
+        <glyph *ngIf="file != null" icon="cancel" size="small" class="cancel-button" (click)="clearSelection()"></glyph>
+    </p>
+    <p class="alert" *ngIf="file != null && file.size > maxByteSize">
+        {{maxByteSizeExceededMessage}} ({{(maxByteSize/1024).ceil()}}kb)
     </p>
 </div>
