--- a/lib/components/fo_select_component/fo_select_component.css
+++ b/lib/components/fo_select_component/fo_select_component.css
@@ -1,2 +1,13 @@
-:host{margin-bottom:1rem;display:block}:host label{width:100%;display:inline-block;margin-bottom:0.2em;font-size:0.8em;color:#888}
+:host {
+  margin-bottom: 1rem;
+  display: block; }
+  :host label {
+    width: 100%;
+    display: inline-block;
+    margin-bottom: 0.2em;
+    font-size: 0.8em;
+    color: #888; }
+  :host /deep/ material-dropdown-select.full-width {
+    width: 100%; }
+
 /*# sourceMappingURL=fo_select_component.css.map */
