--- a/lib/components/fo_modal_component/fo_modal_component.html
+++ b/lib/components/fo_modal_component/fo_modal_component.html
@@ -1,7 +1,7 @@
 <modal [visible]="visible">
     <material-dialog headered [class.fixed-height]="fixedHeight" [class.fixed-width]="fixedWidth" [error]="error">
         <div class="header" header>
-            <material-button raised icon (trigger)="close()" class="float-right">
+            <material-button *ngIf="showCloseButton" raised icon (trigger)="close()" class="float-right">
                 <glyph icon="close" size="large"></glyph>
             </material-button>
             {{title}}
