foselect disabled input

--- a/lib/components/fo_select_component/fo_select_component.html
+++ b/lib/components/fo_select_component/fo_select_component.html
@@ -1,6 +1,7 @@
 <label (click)="(visible = true)">{{label}}</label>
 <material-dropdown-select
         [class.full-width]="fullWidth"
+        [disabled]="disabled"
         [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
         [popupMatchInputWidth]="true"
         [options]="selectionOptions"
