--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -1,4 +1,4 @@
-<h3 id="title">{{title}}</h3>
+<h3 id="title">{{title | phrase}}</h3>
 <div id="search">
     <input type="text" maxlength="64" [(ngModel)]="searchPhrase" #search />
     <div class="search-icon-container"><glyph size="x-large" icon="search"></glyph></div>
