--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -3,10 +3,10 @@
             headered
             [class.fixed-height]="fixedHeight"
             [class.fixed-width]="fixedWidth"
-            [error]="error">
+            [error]="error | phrase">
         <div class="header" header>
             <h3>
-                {{title}}
+                {{title | phrase}}
                 <material-button
                         *ngIf="showCloseButton"
                         class="float-right"
