--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -6,7 +6,7 @@
             [error]="error">
         <div class="header" header>
             <h3>
-                {{title}}
+                {{title | phrase}}
                 <material-button
                         *ngIf="showCloseButton"
                         class="float-right"
