--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
@@ -1,5 +1,5 @@
 <material-dropdown-select
-        [buttonText]="label"
+        [buttonText]="label | phrase"
         [popupMatchInputWidth]="false"
         [options]="selectionOptions"
         [selection]="selectionModel"
