--- a/lib/src/components/fo_youtube_player_component/fo_youtube_player_component.html
+++ b/lib/src/components/fo_youtube_player_component/fo_youtube_player_component.html
@@ -1,4 +1,4 @@
 <div id="youtube-player-wrapper">
     <!-- This will be converted to an iframe by Youtube internal script -->
-    <div id="youtube-player-video"></div>
+    <div [id]="elementId"></div>
 </div>
