--- a/lib/src/components/fo_file_upload_component/fo_file_upload_component.html
+++ b/lib/src/components/fo_file_upload_component/fo_file_upload_component.html
@@ -1,4 +1,4 @@
-<label>{{label}}</label>
+<label>{{label | phrase}}</label>
 <div class="container" (dragenter)="$event.preventDefault()" (dragover)="$event.preventDefault()" (drop)="onDrop($event)">
     <input #input type="file" (change)="onFileChange($event)" accept="image/*,.pdf" />
     <material-button raised (trigger)="input.click()"><glyph icon="folder_open"></glyph></material-button>
