--- a/lib/src/components/fo_youtube_player_component/fo_youtube_player_component.css
+++ b/lib/src/components/fo_youtube_player_component/fo_youtube_player_component.css
@@ -1,13 +1,2 @@
-#youtube-player-wrapper {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 0;
-  height: 0; }
-  #youtube-player-wrapper #youtube-player-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
-
+#youtube-player-wrapper{position:relative;padding-bottom:56.25%;padding-top:0;height:0}#youtube-player-wrapper iframe{position:absolute;top:0;left:0;width:100%;height:100%}
 /*# sourceMappingURL=fo_youtube_player_component.css.map */
